# registrant

./: .editorconfig  Cargo.toml  README.md  build.rs
src/: main.rs  proto.rs  registry.rs  server.rs
src/kv/: mem.rs  mod.rs
src/storage/: mem.rs  mod.rs
