[package]
name = "registrant"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.3", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.3", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3"
tower = "0.3"


[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }