[package]
name = "registrant"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tonic = { version = "0.3", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.3", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3"
tower = "0.3"
uuid = "0.8"


[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
